--- a/styles/dark.css
+++ b/styles/dark.css
@@ -9,6 +9,11 @@
     Так стили написанные ниже будут иметь больший вес,
     чем стили в медиазапросе предпочтений пользователя
   */
+  --accent-color: #ff0070;
+  --sub-accent-color: #db00ff;
+  --main-text-color: #f1b2ce;
+  --conter-accent-color: #000028;
+  --background-image: url(/images/cover-image-dark.png);
 }
 
 .theme-dark .page {
