--- a/styles/light.css
+++ b/styles/light.css
@@ -9,8 +9,70 @@
     Так стили написанные ниже будут иметь больший вес,
     чем стили в медиазапросе предпочтений пользователя
   */
+  --accent-color: #ff8dcb;
+  --sub-accent-color: #ffc2e6;
+  --main-text-color: #353430;
+  --conter-accent-color: #fff1f7;
+  --background-image: url(/images/cover-image-light.png);
 }
 
 .theme-light .page {
   /* Вам также нужно будет написать ряд подобных селекторов */
+  color: var(--main-text-color);
+}
+
+.theme-light .decorated-zone::before,
+.theme-light .decorated-zone::after {
+  border-color: var(--main-text-color);
+}
+
+.theme-light .decorative-text {
+  display: none;
+}
+
+.theme-light .header__theme-menu-button {
+  color: var(--main-text-color);
+}
+
+.theme-light .header__theme-menu-button_active {
+  border-color: var(--main-text-color);
+}
+
+.theme-light .main__article-header {
+  color: var(--main-text-color);
+}
+
+@media (prefers-color-scheme: light) {
+  :root.theme-auto {
+    --accent-color: #ff8dcb;
+    --sub-accent-color: #ffc2e6;
+    --main-text-color: #353430;
+    --conter-accent-color: #fff1f7;
+    --background-image: url(/images/cover-image-light.png);
+  }
+
+  .theme-auto .page {
+    color: var(--main-text-color);
+  }
+
+  .theme-auto .decorated-zone::before,
+  .theme-auto .decorated-zone::after {
+    border-color: var(--main-text-color);
+  }
+
+  .theme-auto .decorative-text {
+    display: none;
+  }
+
+  .theme-auto .header__theme-menu-button {
+    color: var(--main-text-color);
+  }
+
+  .theme-auto .header__theme-menu-button_active {
+    border-color: var(--main-text-color);
+  }
+
+  .theme-auto .main__article-header {
+    color: var(--main-text-color);
+  }
 }
