--- a/styles/style.css
+++ b/styles/style.css
@@ -1,5 +1,298 @@
 /* Основные стили проекта. Это стили для темы, которую вы верстаете первой. */
 
+html {
+  height: 100%;
+}
+
 .page {
   /* сохраните в разметке и стилях класс page у тега body. Он удобен, чтобы составлять селекторы для разных цветовых тем. */
+  font-family: "IBM Plex mono", sans-serif;
+  font-size: 18px;
+  font-weight: 400;
+  height: 100%;
+  color: var(--conter-accent-color);
+  background-color: var(--conter-accent-color);
+  background-image: var(--background-image);
+  background-position: bottom center;
+  background-repeat: no-repeat;
+  background-size: cover;
+  background-attachment: fixed;
+}
+
+.decorated-zone {
+  height: 100vh;
+}
+
+.decorated-zone::before {
+  content: "";
+  display: block;
+  width: 25px;
+  height: 25px;
+  border-top: 1px solid var(--accent-color);
+  border-right: 1px solid var(--accent-color);
+  place-self: start end;
+  grid-row: 1 / 2;
+  grid-column: 1;
+}
+
+.decorated-zone::after {
+  content: "";
+  display: block;
+  width: 25px;
+  height: 25px;
+  border-bottom: 1px solid var(--accent-color);
+  border-left: 1px solid var(--accent-color);
+  place-self: end start;
+  grid-row: -1 / -2;
+  grid-column: 1;
+}
+
+.title {
+  font-size: clamp(7.25rem, 7.0115rem + 1.0178vw, 7.5rem);
+  font-weight: 700;
+  line-height: 0.825em;
+  color: var(--sub-accent-color);
+  text-shadow: 4px 4px var(--accent-color);
+}
+
+.title-decor {
+  background-color: var(--accent-color);
+}
+
+.link {
+  text-decoration: none;
+  text-shadow: 2px 1px var(--accent-color);
+}
+
+.link:hover {
+  border-bottom: 1px solid var(--main-text-color);
+}
+
+.link:focus-visible {
+  outline: 1px solid var(--main-text-color);
+}
+
+.header {
+  padding: var(--page-offset);
+  display: grid;
+  grid-template-rows: 1fr min-content 1fr;
+  gap: 55px;
+  min-block-size: 667px;
+}
+
+.decorative-text {
+  position: absolute;
+  top: var(--page-offset);
+  right: calc(var(--page-offset) + 9px);
+  display: flex;
+  align-items: center;
+  gap: 10px;
+  color: var(--accent-color);
+  text-transform: uppercase;
+}
+
+.decorative-text::after {
+  content: "";
+  display: inline-block;
+  width: 9px;
+  height: 9px;
+  background-color: var(--accent-color);
+  border-radius: 50%;
+  box-shadow: 0 0 5px 2px var(--accent-color);
+}
+
+.header__theme-menu {
+  place-self: end end;
+  grid-row: 1 / 2;
+  grid-column: 1;
+}
+
+.header__theme-menu-list {
+  display: flex;
+  flex-direction: column;
+  gap: 10px;
+}
+
+.header__theme-menu-button {
+  padding: 0;
+  width: 70px;
+  height: 26px;
+  border: none;
+  color: var(--accent-color);
+  background-color: transparent;
+  text-transform: lowercase;
+}
+
+.header__theme-menu-button:hover {
+  border-color: #ff007066;
+}
+
+.header__theme-menu-button:focus-visible {
+  outline: none;
+  border-bottom: 1px solid var(--accent-color);
+}
+
+.header__theme-menu-button_active {
+  border: 1px solid var(--accent-color);
+  pointer-events: none;
+}
+
+.header__description {
+  grid-row: -1 / -2;
+  grid-column: 1;
+  font-weight: 700;
+  justify-self: end;
+}
+
+.main {
+  padding: var(--blocks-gap) var(--page-offset);
+  display: flex;
+  flex-direction: column;
+  gap: var(--articles-gap);
+}
+
+.main__article {
+  display: grid;
+  gap: 20px;
+}
+
+.main__article-header {
+  font-weight: 700;
+  color: var(--accent-color);
+}
+
+.main__section-header {
+  margin-bottom: 10px;
+  font-weight: 700;
+}
+
+.main__sub-section-header {
+  margin-bottom: 10px;
+}
+
+.main__section-text {
+  color: var(--main-text-color);
+}
+
+.sub-level-section {
+  display: flex;
+  flex-direction: column;
+  gap: 20px;
+}
+
+.pictures-section {
+  display: grid;
+  gap: var(--page-offset);
+}
+
+.main__section-image {
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+}
+
+.footer {
+  padding: var(--page-offset);
+  display: grid;
+  grid-template-rows: 1fr 1fr 1fr;
+  min-block-size: 667px;
+}
+
+.footer__title {
+  place-self: center center;
+  text-shadow: 2px 2px var(--accent-color);
+}
+
+.no-margin-bottom {
+  margin-bottom: 0;
+}
+
+@media (width >= 768px) {
+
+  :root {
+    --page-offset: 20px;
+    --blocks-gap: 60px;
+    --articles-gap: 80px;
+  }
+
+  .title {
+    font-size: clamp(7.5rem, 0.5625rem + 14.4531vw, 9.8125rem);
+  }
+
+  .header__theme-menu {
+    align-self: center;
+  }
+
+  .header__description {
+    width: 50%;
+    align-content: center;
+  }
+
+  .main__article {
+    grid-template-columns: 1fr 1fr 1fr;
+  }
+
+  .main__article-header {
+    grid-column: 1;
+  }
+
+  .main__section {
+    grid-column: 2 / -1;
+  }
+
+  .header-on-top .main__section {
+    grid-column: 1 / -1;
+  }
+
+  .pictures-section {
+    grid-column: 1 / -1;
+    grid-template-columns: 1fr 1fr 1fr;
+    grid-template-rows: min-content min-content min-content min-content;
+  }
+
+  .pictures-section .main__section-header {
+    grid-column: 1 / -1;
+    grid-row: 1;
+  }
+
+  .main__section-image:nth-of-type(1) {
+    grid-row: 2;
+    grid-column: 1 / 3;
+  }
+
+  .main__section-image:nth-of-type(2) {
+    grid-row: 2 / 4;
+    grid-column: 3;
+  }
+
+  .main__section-image:nth-of-type(3) {
+    grid-row: 3 / 5;
+    grid-column: 1;
+  }
+
+  .main__section-image:nth-of-type(4) {
+    grid-row: 3;
+    grid-column: 2;
+  }
+
+  .main__section-image:nth-of-type(5) {
+    grid-row: 4;
+    grid-column: 2 / 4;
+  }
+}
+
+@media (width >= 1024px) {
+  
+  .header__theme-menu {
+    place-self: start center;
+  }
+
+  .header__theme-menu-list {
+    flex-direction: row;
+  }
+
+  .header-on-top .main__section {
+    grid-row: 2;
+    grid-column: initial;
+  }
 }
