--- a/styles/variables.css
+++ b/styles/variables.css
@@ -2,3 +2,14 @@
   Переменные для вашего проекта
   и их переопределение под различные устройства
 */
+
+:root {
+  --accent-color: #ff0070;
+  --sub-accent-color: #db00ff;
+  --main-text-color: #f1b2ce;
+  --conter-accent-color: #000028;
+  --background-image: url(/images/cover-image-dark.png);
+  --page-offset: 10px;
+  --blocks-gap: 40px;
+  --articles-gap: 50px;
+}
