--- a/styles/style.css
+++ b/styles/style.css
@@ -8,6 +8,7 @@ html {
   /* сохраните в разметке и стилях класс page у тега body. Он удобен, чтобы составлять селекторы для разных цветовых тем. */
   font-family: "IBM Plex mono", sans-serif;
   font-size: 18px;
+  line-height: 23.4px;
   font-weight: 400;
   height: 100%;
   color: var(--conter-accent-color);
@@ -75,7 +76,7 @@ html {
 .header {
   padding: var(--page-offset);
   display: grid;
-  grid-template-rows: 1fr min-content 1fr;
+  grid-template-rows: 1fr 1fr 1fr;
   gap: 55px;
   min-block-size: 667px;
 }
@@ -105,6 +106,7 @@ html {
   place-self: end end;
   grid-row: 1 / 2;
   grid-column: 1;
+  margin-bottom: 10px;
 }
 
 .header__theme-menu-list {
@@ -135,6 +137,10 @@ html {
 .header__theme-menu-button_active {
   border: 1px solid var(--accent-color);
   pointer-events: none;
+}
+
+.header__title {
+  align-self: center;
 }
 
 .header__description {
@@ -219,13 +225,16 @@ html {
     font-size: clamp(7.5rem, 0.5625rem + 14.4531vw, 9.8125rem);
   }
 
-  .header__theme-menu {
-    align-self: center;
+  .header__title {
+    margin-left: -20px;
+  }
+
+  .header {
+    gap: 72px;
   }
 
   .header__description {
     width: 50%;
-    align-content: center;
   }
 
   .main__article {
@@ -238,6 +247,11 @@ html {
 
   .main__section {
     grid-column: 2 / -1;
+  }
+
+  [class="main__article"] [class="main__section"],
+  [class="main__article"] [class="main__section sub-level-section"] {
+    margin-left: 6px;
   }
 
   .header-on-top .main__section {
@@ -283,6 +297,10 @@ html {
 
 @media (width >= 1024px) {
   
+  .header {
+    gap: 86px;
+  }
+
   .header__theme-menu {
     place-self: start center;
   }
@@ -294,5 +312,10 @@ html {
   .header-on-top .main__section {
     grid-row: 2;
     grid-column: initial;
+  }
+
+  [class="main__article"] [class="main__section"],
+  [class="main__article"] [class="main__section sub-level-section"] {
+    margin-left: 0;
   }
 }
