--- a/styles/style.css
+++ b/styles/style.css
@@ -187,9 +187,9 @@ html {
 }
 
 .pictures-section {
-  grid-column: 1 / -1;
   display: grid;
   grid-template-columns: 1fr;
+  grid-template-rows: repeat(5, min-content);
   gap: var(--page-offset);
 }
 
@@ -263,6 +263,7 @@ html {
   }
 
   .pictures-section {
+    grid-column: 1 / -1;
     grid-template-columns: 1fr 1fr 1fr;
     grid-template-rows: min-content min-content min-content min-content;
   }
