without lazy load

--- a/styles/style.css
+++ b/styles/style.css
@@ -190,7 +190,7 @@ html {
   grid-column: 1 / -1;
   display: grid;
   grid-template-columns: 1fr;
-  grid-template-rows: repeat(6, 1fr);
+  grid-template-rows: repeat(6, min-content);
   gap: var(--page-offset);
 }
 
