--- a/styles/dark.css
+++ b/styles/dark.css
@@ -22,3 +22,7 @@
 .theme-dark .page {
   /* Вам также нужно будет написать ряд подобных селекторов */
 }
+
+.theme-dark .decorative-text {
+  display: flex;
+}
