--- a/styles/light.css
+++ b/styles/light.css
@@ -29,7 +29,7 @@
 
 @media (prefers-color-scheme: light) {
   
-  :root.theme-auto {
+  :root {
     --accent-color: #ff8dcb;
     --sub-accent-color: #ffc2e6;
     --conter-accent-color: #fff1f7;
@@ -40,7 +40,7 @@
     --background-image: url(../images/cover-image-light.png);
   }
 
-  .theme-auto .decorative-text {
+  .decorative-text {
     display: none;
   }
 }
